jss-compiler/tests/parser/invalid/multiple_syntax_errors.jss
let int x = 10 y;
let str s = 10 z;
function void main() {
    int a;
}
